--- a/script/template/template.html
+++ b/script/template/template.html
@@ -5,7 +5,7 @@
     <title>{title} - 七草桔梗</title>
     <meta name="description" content="{title}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
   </head>
 
   <body>
