--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: Arial, sans-serif;
   background-color: #1e1e1e; 
@@ -55,4 +54,25 @@ a {
 a:hover {
   color: #a8d4b1;
   text-decoration-color: #a8d4b1; 
+}
+
+pre {
+  white-space: pre-wrap; 
+  word-wrap: normal; 
+  overflow-x: auto; 
+  background-color: #1c1c1c; 
+  padding: 10px; 
+  border-radius: 5px; 
+  color: #f5f5f5; 
+  max-width: 100%; 
+  box-sizing: border-box;
+}
+
+code {
+  white-space: pre-wrap; 
+  word-wrap: normal;
+  /* background-color: #2e2e2e;  */
+  color: #f5f5f5;
+  padding: 2px 4px; 
+  border-radius: 3px; 
 }
