feat: Add script

--- a/script/template/template.html
+++ b/script/template/template.html
@@ -13,6 +13,7 @@
       <header>
         <h1>{title}</h1>
         <p>投稿日: {date}</p>
+        <p>更新日: {updated}</p>
       </header>
 
       <article>
